2009-10-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* ntp.h: Renamed to otp.h.

	* Makefile, MANIFEST: Adapted accordingly.

2009-10-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/comm.h: Adjusted proto for comm_init.

	* misc/ntp.h: Removed struct ntp_caps. 

2009-10-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Fixed some FIXMEs about response checking.

	* omp/omp.c (omp_delete_report, omp_modify_task, omp_modify_task_file):
	Added response checking.

2009-10-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Use check_response where response entities have no (interesting)
	content, avoid duplicate code.

	* omp/omp.c (omp_delete_task, omp_create_target, omp_delete_target)
	(omp_create_config, omp_delete_config, omp_create_lsc_credential)
	(omp_delete_lsc_credential): Call check_response instead of checking
	response in place.
	(omp_get_nvt_details_503): Minor cosmetic.

2009-10-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Refactored "503" calls.

	* omp/omp.c (get_omp_response_503): New. Extracted from other
	functions, added todo about possible memleak.
	(omp_get_nvt_all, omp_get_nvt_feed_checksum, omp_get_rules_503)
	(omp_get_dependencies_503, omp_get_preferences_503)
	(omp_get_nvt_details): Call new function, completed doc work.

2009-10-20  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Moved omp related functions from openvas-client/openvas/comm.c module.

	* omp/omp.c (omp_get_nvt_all, omp_get_nvt_feed_checksum,
	omp_get_rules_503, omp_get_dependencies_503):
	New. Moved from openvas-client/openvas/comm.c.

	* omp/omp.h: Added protos for new methods.

2009-10-19  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/xml.c (compare_entities): Continue to the rest of the comparisons
	when the attributes are both NULL, instead of claiming equality.

2009-10-19  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta5.SVN.
